--- a/roles/zabbix/templates/zabbix.j2
+++ b/roles/zabbix/templates/zabbix.j2
@@ -17,7 +17,7 @@ Alias /zabbix /usr/share/zabbix
         php_value max_input_time 300
         php_value max_input_vars 10000
         php_value always_populate_raw_post_data -1
-         php_value date.timezone Europe/Riga
+         {{ http_timezone_server }}
     </IfModule>
 </Directory>
 
